# clo

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  ops.yml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: release.yml  test.yml
about/1_changelog/: index.html
about/2_code_of_conduct/: index.html
about/3_contributing/: index.html
about/4_security/: index.html
about/license/: index.html
changelog/: index.html
contributing/: index.html
docs/: reference.md
docs/reference/: api.md  cli.md  input.md  output.md  types.md
javascripts/: extra.js
license/: index.html
reference/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/input/: index.html
reference/output/: index.html
reference/types/: index.html
search/: search_index.json
src/clo/: __init__.py  __main__.py  api.py  input.py  meta.py  output.py  types.py
stylesheets/: extra.css
tests/: compare.py  test_bs.py  test_count.py  test_delete.py  test_fields.py  test_read.py  test_search.py  test_types.py  test_write.py
tests/test_cli/: test_1_search.py  test_2_count.py  test_5_create.py  test_7_delete.py
usage/: index.html
usage/actions/0_search/: index.html
usage/actions/1_count/: index.html
usage/actions/2_read/: index.html
usage/actions/3_find/: index.html
usage/actions/4_create/: index.html
usage/actions/5_write/: index.html
usage/actions/6_delete/: index.html
(+2 files in other folders)
