[bumpversion]
current_version = 0.6.0
commit = True
tag = True

[bumpversion:file:src/clo/meta.py]

[flake8]
max-line-length = 120
exclude = .tox,.git,docs,venv,.venv,build

[mypy]
check_untyped_defs = true
ignore_missing_imports = true

[metadata]
description_file = README.md

[tool:pytest]
testpaths = tests

[coverage:run]
source = clo
omit = __main__.py,meta.py

[coverage:paths]
source =
	src/clo
	.tox/*/lib/python*/site-packages/clo

[coverage:report]
show_missing = True
include = */site-packages/clo/*
exclude_lines =
	if IS_TYPE_CHECKING:
	pragma: no cover
